plugins {
    id 'java'
}

group 'de.amr.games.pacman'
version '1.0'

import org.gradle.internal.os.OperatingSystem
OperatingSystem os = OperatingSystem.current()
ext.arch = System.getProperty("os.arch")
println "Operating System: name='${os.name}' version='${os.version}' arch='${arch}'"

dependencies {
    implementation project(':pacman-lib')
    implementation 'org.tinylog:tinylog-api:2.7.0'
    implementation 'org.tinylog:tinylog-impl:2.7.0'
    testImplementation 'junit:junit:4.13.2'
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
